NXP-16090: format